Fix grass z-index

--- a/src/index.css
+++ b/src/index.css
@@ -127,8 +127,9 @@ body {
 }
 
 .parallax__foreground-front {
-    z-index: 12;
+    z-index: 13;
     align-self: end;
+    pointer-events: none;
 }
 
 @keyframes parallax {
